Version 2.60:   ( Sat Nov 13 09:21:23 IST 2010 )
------------------------------------------------

* Made t/19param-found-outside-section.t pass in case IO::Scalar is not
installed.
    - We got many failing test reports due to that, like:
    - http://www.cpantesters.org/cpan/report/eb3df0f4-eeb7-11df-b934-9430e12b63f3

Version 2.59:   ( Fri Nov 12 13:21:02 IST 2010 )
------------------------------------------------

* Applied a patch from "sharyanto" about enabling the -fallback parameter
to new for items outside any section.
    - https://rt.cpan.org/Public/Bug/Display.html?id=62944

* Add the tag-release.pl file to tag a release.

Version 2.58:   ( Mon May 17 10:43:06 IDT 2010 )
------------------------------------------------

* Incorporated a fix for some broken POD.
    - https://rt.cpan.org/Ticket/Display.html?id=51617
    - Thanks to Frank Wiegand for reporting it.

* Got rid of \r/carriage-returns's in lib/Config/IniFiles.pm .
    - It interfered with applying a patch.

* Applied a patch to get rid of indirect object notation in the documentation
and code ("new Config::IniFiles") and replace it with Config::IniFiles->new().
    - https://rt.cpan.org/Ticket/Display.html?id=57536
    - Thanks to Tom Molesworth for the patch.

Version 2.57:   ( Mon Mar  1 15:49:54 IST 2010 )
------------------------------------------------

* Fixed failure to read the ini file contents from a filehandle made out of a 
  scalar
    - https://rt.cpan.org/Ticket/Display.html?id=45997
    - Applied a patch by Nicolas Mendoza - thanks!

Version 2.56:   ( Thu Dec 31 06:55:01 IST 2009 )
------------------------------------------------

* Hopefully fixed the skip() in t/07misc.t
    - https://rt.cpan.org/Public/Bug/Display.html?id=53238
    - It was skip($num, $label) instead of skip($label, $num) and it
    lacked a "SKIP:" label.

Version 2.55:   ( Tue Dec 22 17:42:59 IST 2009 )
------------------------------------------------

* Refactoring the tests: