@@ -1,9 +1,12 @@
 #!/usr/bin/perl
 # This script is a regression test for:
-#
-# https://rt.cpan.org/Ticket/Display.html?id=45997
+# 
+# https://rt.cpan.org/Ticket/Display.html?id=54997
 #
 # Failure to read the ini file contents from a filehandle made out of a scalar
+#
+# <<< [patch] stat() on unopened filehandle warning thrown when using 
+# filehandle made from a scalar. >>>
 
 use Test::More;
 
